--- a/css/collectme-mobile.css
+++ b/css/collectme-mobile.css
@@ -1789,7 +1789,7 @@ input[type="checkbox"]:disabled:active + .topcoat-checkbox__checkmark:before {
   padding-right: 1rem;
   background: #e5e9e8;
   color: #454545;
-  box-shadow: inset 0 -1px #9daca9, 0 1px #d6dcdb;
+  box-shadow: none;
 }
 
 .topcoat-navigation-bar__item {
