--- a/css/collectme-mobile.css
+++ b/css/collectme-mobile.css
@@ -173,7 +173,7 @@
   color: #454545;
   text-shadow: 0 1px #fff;
   vertical-align: top;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   box-shadow: inset 0 1px #fff;
   border: 1px solid #9daca9;
   border-radius: 6px;
@@ -598,7 +598,7 @@
   color: #454545;
   text-shadow: 0 1px #fff;
   vertical-align: top;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   box-shadow: inset 0 1px #fff;
   border: 1px solid #9daca9;
   border-radius: 6px;
@@ -1032,7 +1032,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox__checkmark:after {
 .topcoat-checkbox__checkmark:before {
   width: 2rem;
   height: 2rem;
-  background: #e5e9e8;
+  background: #eaedf1;
   border: 1px solid #9daca9;
   border-radius: 3px;
   box-shadow: inset 0 1px #fff;
@@ -1073,7 +1073,7 @@ input[type="checkbox"]:active + .topcoat-checkbox__checkmark:before {
 
 input[type="checkbox"]:disabled:active + .topcoat-checkbox__checkmark:before {
   border: 1px solid #9daca9;
-  background: #e5e9e8;
+  background: #eaedf1;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -1190,7 +1190,7 @@ input[type="checkbox"]:disabled:active + .topcoat-checkbox__checkmark:before {
   color: #454545;
   text-shadow: 0 1px #fff;
   vertical-align: baseline;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   box-shadow: inset 0 1px #fff;
   border: 1px solid #9daca9;
   border-radius: 6px;
@@ -1787,7 +1787,7 @@ input[type="checkbox"]:disabled:active + .topcoat-checkbox__checkmark:before {
   height: 4.375rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  background: #e5e9e8;
+  background: #eaedf1;
   color: #454545;
   box-shadow: none;
 }
@@ -2207,7 +2207,7 @@ input[type="radio"]:checked + .topcoat-radio-button__checkmark:after {
 .topcoat-radio-button__checkmark:before {
   width: 1.875rem;
   height: 1.875rem;
-  background: #e5e9e8;
+  background: #eaedf1;
   border: 1px solid #9daca9;
   box-shadow: inset 0 1px #fff;
 }
@@ -2245,7 +2245,7 @@ input[type="radio"]:active + .topcoat-radio-button__checkmark:before {
 
 input[type="radio"]:disabled:active + .topcoat-radio-button__checkmark:before {
   border: 1px solid #9daca9;
-  background: #e5e9e8;
+  background: #eaedf1;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -2411,7 +2411,7 @@ limitations under the License.
 .topcoat-range::-webkit-slider-thumb {
   height: 3rem;
   width: 2rem;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   border: 1px solid #9daca9;
   border-radius: 6px;
   box-shadow: inset 0 1px #fff;
@@ -2420,7 +2420,7 @@ limitations under the License.
 .topcoat-range::-moz-range-thumb {
   height: 3rem;
   width: 2rem;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   border: 1px solid #9daca9;
   border-radius: 6px;
   box-shadow: inset 0 1px #fff;
@@ -2937,7 +2937,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border-radius: 6px;
   color: #454545;
   text-shadow: 0 1px #fff;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   border: 1px solid #9daca9;
   margin-left: -1.3rem;
   margin-bottom: -1px;
@@ -3125,7 +3125,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: #454545;
   text-shadow: 0 1px #fff;
   vertical-align: top;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   box-shadow: inset 0 1px #fff;
   border-top: 1px solid #9daca9;
 }
