updated CollectMe theme

--- a/css/collectme-mobile.css
+++ b/css/collectme-mobile.css
@@ -1934,7 +1934,7 @@ limitations under the License.
 .topcoat-notification {
   padding: 0.15em 0.5em 0.2em;
   border-radius: 2px;
-  background-color: #ec514e;
+  background-color: #2eb398;
   color: #fff;
 }
 
